add section company + apaptive

--- a/app/index.html
+++ b/app/index.html
@@ -357,29 +357,85 @@
 
 
 
-  <section class="screen">
-    <div class="screen__bg">
-      <div class="container">
-        <div class="screen__box">
-          <h1 class="screen__title">
-            Строительство
-            <br>
-            бассейнов
-            <br>
-            <div class="screen__subtitle">
-              санкт - петербург
+  <div class="wrapper">
+    <main class="main">
+      <section class="screen">
+        <div class="screen__bg">
+          <div class="container">
+            <div class="screen__box">
+              <h1 class="screen__title">
+                Строительство
+                <br>
+                бассейнов
+                <br>
+                <div class="screen__subtitle">
+                  санкт - петербург
+                </div>
+              </h1>
+              <div class="screen__btn global-btn global__btn-contact main-btn">
+                БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ
+              </div>
             </div>
-          </h1>
-          <div class="screen__btn global-btn global__btn-contact main-btn">
-            БЕСПЛАТНАЯ КОНСУЛЬТАЦИЯ
           </div>
         </div>
-      </div>
-    </div>
-  </section>
+      </section>
 
-  <div class="wrapper">
-    <main class="main"></main>
+
+      <section class="company section">
+        <div class="container">
+          <h2 class="company__title title">
+            О КОМПАНИИ В ЦИФРАХ
+          </h2>
+          <div class="company__inner">
+            <div class="company__item">
+              <div class="company__item-title">
+                <span>20+</span>
+                <br>
+                ЛЕТ НА РЫНКЕ
+              </div>
+              <p class="company__item-text text">
+                Предоставляем качественные услуги по строительству, проектированию, реконструкции и
+                обслуживанию бассейнов
+              </p>
+            </div>
+
+            <div class="company__item">
+              <div class="company__item-title">
+                <span>450+</span>
+                <br>
+                ВЫПОЛНЕННЫХ ПРОЕКТОВ
+              </div>
+              <p class="company__item-text text">
+                Строим бассейны «под ключ» - начиная от идеи и проектирования, заканчивая строительством бассейна и
+                заключение договора на сервисное обслуживание
+              </p>
+            </div>
+
+            <div class="company__item">
+              <div class="company__item-title">
+                <span>500+</span>
+                <br>
+                ДОВОЛЬНЫХ КЛИЕНТОВ
+              </div>
+              <p class="company__item-text text">
+                Сотрудничество с нами приносит только положительные эмоции, так как нам важно наилучшим способом
+                воплотить все ваши идеи в жизнь.
+              </p>
+            </div>
+          </div>
+          <div class="global__inner-btn">
+            <a class="global-btn global__btn-contact main-btn" href="#">
+              УЗНАТЬ БОЛЬШЕ
+            </a>
+          </div>
+          <div class="global__section-line"></div>
+        </div>
+      </section>
+
+
+
+
+    </main>
     <footer class="footer"></footer>
   </div>
 
