add section spec + adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -428,10 +428,81 @@
               УЗНАТЬ БОЛЬШЕ
             </a>
           </div>
-          <div class="global__section-line"></div>
         </div>
       </section>
 
+      <section class="spec section">
+        <h2 class="spec__title title">
+          НАША СПЕЦИАЛИЗАЦИЯ
+        </h2>
+        <p class="spec__text text">
+          Специалисты компании «Линия Воды» сосредоточены не на выполнении «плана продаж», а на качестве выполняемых
+          работ. Для нас важно, на каждом этапе выполнить свою работу наилучшим образом и дать твердую гарантию на
+          результат своих работ.
+        </p>
+
+
+
+        <div class="spec__inner">
+
+
+          <div class="spec__wrapper-item">
+            <a class="spec__item global-hover__item" href="#" style="background-image: url('images/content/spec__img1.jpg');">
+              <div class="global-bg">
+                <h3 class="spec__item-title">
+                  ПРОЕКТИРОВАНИЕ
+                  <br>
+                  БАССЕЙНОВ
+                  <span>Подробнее...</span>
+                </h3>
+              </div>
+            </a>
+
+            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img2.jpg');">
+              <div class="global-bg">
+                <h3 class="spec__item-title">
+                  СТРОИТЕЛЬСТВО
+                  <br>
+                  БАССЕЙНОВ
+                  <span>Подробнее...</span>
+                </h3>
+              </div>
+            </a>
+          </div>
+
+
+          <div class="spec__wrapper-item">
+            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img3.jpg');">
+              <div class="global-bg">
+                <h3 class="spec__item-title">
+                  РЕКОНСТРУКЦИЯ
+                  <br>
+                  И РЕМОНТ БАССЕЙНОВ
+                  <span>Подробнее...</span>
+                </h3>
+              </div>
+            </a>
+            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img4.jpg');">
+              <div class="global-bg">
+                <h3 class="spec__item-title">
+                  ОБСЛУЖИВАНИЕ
+                  <br>
+                  БАССЕЙНОВ
+                  <span>Подробнее...</span>
+                </h3>
+              </div>
+            </a>
+          </div>
+        </div>
+
+
+
+        <div class="global__inner-btn">
+          <div class="global__btn-contact global-btn main-btn">
+            ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
+          </div>
+        </div>
+      </section>
 
 
 
