add section benefits + adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -444,10 +444,9 @@
 
 
         <div class="spec__inner">
-
-
           <div class="spec__wrapper-item">
-            <a class="spec__item global-hover__item" href="#" style="background-image: url('images/content/spec__img1.jpg');">
+            <a class="spec__item global-hover__item" href="#"
+              style="background-image: url('images/content/spec__img1.jpg');">
               <div class="global-bg">
                 <h3 class="spec__item-title">
                   ПРОЕКТИРОВАНИЕ
@@ -457,7 +456,6 @@
                 </h3>
               </div>
             </a>
-
             <a class="spec__item" href="#" style="background-image: url('images/content/spec__img2.jpg');">
               <div class="global-bg">
                 <h3 class="spec__item-title">
@@ -469,8 +467,6 @@
               </div>
             </a>
           </div>
-
-
           <div class="spec__wrapper-item">
             <a class="spec__item" href="#" style="background-image: url('images/content/spec__img3.jpg');">
               <div class="global-bg">
@@ -504,6 +500,82 @@
         </div>
       </section>
 
+      <section class="benefits section">
+        <div class="container">
+          <h2 class="benefits__title title">
+            ПРЕИМУЩЕСТВА РАБОТЫ С НАМИ
+          </h2>
+          <div class="benefits__inner">
+            <div class="benefits__item">
+              <div class="benefits__subtitle">
+                Уникальное предложение
+              </div>
+              <p class="benefits__text text">
+                Только для наших клиентов: при заключении договора на сервисное обслуживание построенного нами бассейна
+                даем +1 год к гарантии
+              </p>
+            </div>
+
+            <div class="benefits__item">
+              <div class="benefits__subtitle">
+                Наилучшее решение для вас
+              </div>
+              <p class="benefits__text text">
+                Мы не являемся продавцами оборудования. То есть мы не ограничиваемся «собственным» ассортиментом и
+                подберем для вас самый оптимальный вариант, из предлагаемого на рынке оборудования и материалов.
+              </p>
+            </div>
+
+            <div class="benefits__item">
+              <div class="benefits__subtitle">
+                Проект в подарок
+              </div>
+              <p class="benefits__text text">
+                При заказе бассейна «под ключ» стоимость разработки проекта идет в зачет стоимости оборудования
+              </p>
+            </div>
+
+            <div class="benefits__item">
+              <div class="benefits__subtitle">
+                Фиксированная стоимость
+              </div>
+              <p class="benefits__text text">
+                В договоре прописываем и соблюдаем точные сроки и фиксированную стоимость выполнения работ
+              </p>
+            </div>
+
+            <div class="benefits__item">
+              <div class="benefits__subtitle">
+                Бесплатный замер
+                <br>
+                и расчет стоимости
+              </div>
+              <p class="benefits__text text">
+                Наш специалист приедет к вам на объект и подробно проконсультирует по любым вопросам, связанным со
+                строительством бассейна и не только, а так же бесплатно произведет замеры и расчёт стоимости будущего
+                объекта.
+              </p>
+            </div>
+
+            <div class="benefits__item">
+              <div class="benefits__subtitle">
+                Гибкое ценообразование
+              </div>
+              <p class="benefits__text text">
+                Наша цель – оказание качественных услуг. Мы заинтересованы в предложении оптимального решения в рамках
+                требований заказчики и заложенного бюджета
+              </p>
+            </div>
+
+          </div>
+          <div class="global__inner-btn">
+            <a class="benefits__btn global__btn-contact global-btn main-btn" href="#">
+              УЗНАТЬ О КОМПАНИИ
+            </a>
+          </div>
+
+        </div>
+      </section>
 
 
     </main>
