add section projects + adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -432,10 +432,10 @@
       </section>
 
       <section class="spec section">
-        <h2 class="spec__title title">
+        <h2 class="suptitle title">
           НАША СПЕЦИАЛИЗАЦИЯ
         </h2>
-        <p class="spec__text text">
+        <p class="spec__text subtitle text">
           Специалисты компании «Линия Воды» сосредоточены не на выполнении «плана продаж», а на качестве выполняемых
           работ. Для нас важно, на каждом этапе выполнить свою работу наилучшим образом и дать твердую гарантию на
           результат своих работ.
@@ -445,8 +445,7 @@
 
         <div class="spec__inner">
           <div class="spec__wrapper-item">
-            <a class="spec__item global-hover__item" href="#"
-              style="background-image: url('images/content/spec__img1.jpg');">
+            <a class="spec__item" href="#" style="background-image: url('images/content/spec__img1.jpg');">
               <div class="global-bg">
                 <h3 class="spec__item-title">
                   ПРОЕКТИРОВАНИЕ
@@ -576,6 +575,116 @@
 
         </div>
       </section>
+
+
+
+
+
+
+
+
+
+      <section class="projects section">
+        <h2 class="projects__title title">
+          галерея работ
+        </h2>
+        <p class="projects__text subtitle text">
+          В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
+          по праву гордимся.
+        </p>
+
+        <div class="projects__inner">
+
+          <div class="projects__wrapper-item">
+            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img1.jpg');">
+              <div class="global-bg">
+                <h3 class="projects__item-title">
+                  КУПЕЛЬ НА ДАЧЕ
+                  <span class="projects__item-more">Подробнее...</span>
+                </h3>
+                <p class="projects__text-more text">
+                  Уличная купель предназначенная для круглогодичного использования. Железобетонная конструкция чаши
+                  встроена в открытую террасу возле дома. Откидывающаяся Лестница позволяет закрывать купель легкой
+                  пластиковой крышкой что позволяет воде оставаться всегда кристально чистой.
+                </p>
+              </div>
+            </a>
+
+            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img2.jpg');">
+              <div class="global-bg">
+                <h3 class="projects__item-title">
+                  МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
+                  <span class="projects__item-more">Подробнее...</span>
+                </h3>
+                <p class="projects__text-more">
+                  Бассейн отделан белоснежной мозаикой и имеет «римский» вход, Конструкция чаши отлита по разработанному
+                  проекту одновременно с бетонированием фундамента здания, Оборудование бассейна вместе с переливной
+                  емкостью расположено в техническом этаже дома.
+                </p>
+              </div>
+            </a>
+          </div>
+
+
+
+          <div class="projects__wrapper-item">
+            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img3.jpg');">
+              <div class="global-bg">
+                <h3 class="projects__item-title">
+                  БАССЕЙН В ЗАГОРОДНОМ ДОМЕ
+                  <span class="projects__item-more">Подробнее...</span>
+                </h3>
+                <p class="projects__text-more">
+                  Бассейн отделан пленкой ПВХ «под мозаику». Противоток с расходом в 120 м³ позволяет проводить
+                  тренировки по плаванию в ограниченном пространстве бассейна.
+                </p>
+              </div>
+            </a>
+            <a class="projects__item" href="#" style="background-image: url('images/content/projects__img4.jpg');">
+              <div class="global-bg">
+                <h3 class="projects__item-title">
+                  Банный комплекс с бассейном в коттедже
+                  <span class="projects__item-more">Подробнее...</span>
+                </h3>
+                <p class="projects__text-more">
+                  Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ, вокруг построена
+                  деревянная терраса. Оборудование расположено в техническом помещении выше уровня воды.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+
+
+        <div class="global__inner-btn">
+          <a class="global-btn main-btn global__btn-contact" href="#">
+            ПОСМОТРЕТЬ ВСЕ РАБОТЫ
+          </a>
+        </div>
+
+      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     </main>
