add section questions + adaprive

--- a/app/index.html
+++ b/app/index.html
@@ -441,8 +441,6 @@
           результат своих работ.
         </p>
 
-
-
         <div class="spec__inner">
           <div class="spec__wrapper-item">
             <a class="spec__item" href="#" style="background-image: url('images/content/spec__img1.jpg');">
@@ -493,9 +491,9 @@
 
 
         <div class="global__inner-btn">
-          <div class="global__btn-contact global-btn main-btn">
+          <a class="global__btn-contact global-btn main-btn" href=#>
             ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
-          </div>
+          </a>
         </div>
       </section>
 
@@ -577,13 +575,6 @@
       </section>
 
 
-
-
-
-
-
-
-
       <section class="projects section">
         <h2 class="projects__title title">
           галерея работ
@@ -661,6 +652,127 @@
             ПОСМОТРЕТЬ ВСЕ РАБОТЫ
           </a>
         </div>
+
+      </section>
+
+
+      <section class="questions section">
+        <h2 class="questions__title title">
+          ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ
+        </h2>
+        <div class="questions__inner">
+          <div class="container">
+            <div class="questions__item questions__item--active">
+              <div class="questions__item-title">
+                <p class="questions__item-title--text">
+                  Какой бассейн выбрать?
+                </p>
+                <div class="questions__item-wrapper">
+                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                </div>
+              </div>
+
+              <p class="questions__item-text text">
+                Для того чтобы понять, какой бассейн подойдёт именно вам - предлагаем ознакомиться с различными типами
+                чаш
+                на страницах нашего сайта:
+                <a class="questions__item-link" href="#">полипропиленовый</a>,
+                <a class="questions__item-link" href="#">композитный</a>,
+                <a class="questions__item-link" href="#">бетонный</a>,
+                или
+                <a class="questions__item-link" href="#">секционный</a>,
+                <br>
+                <br>
+                или
+
+                <a class="questions__item-link" href="#">оставить заявку на
+                  бесплатную консультацию</a>
+
+              </p>
+            </div>
+
+            <div class="questions__item">
+              <div class="questions__item-title">
+                <p class="questions__item-title--text">
+                  Какие гарантии вы даёте на вашу работу?
+                </p>
+                <div class="questions__item-wrapper">
+                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                </div>
+              </div>
+              <p class="questions__item-text text">
+                Мы даем гарантию на всю нашу работу 2 года,
+                <br>
+                <br>
+                +1 год при заключении сервисного договора.
+              </p>
+            </div>
+
+            <div class="questions__item">
+              <div class="questions__item-title">
+                <p class="questions__item-title--text">
+                  Какие данные нужны для предварительного расчета бассейна?
+                </p>
+                <div class="questions__item-wrapper">
+                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                </div>
+              </div>
+              <p class="questions__item-text text">
+                Что бы сделать предварительный расчет нам потребуется:
+                <br>
+                <br>
+                Для Вашего удобства мы можем бесплатно приехать на ваш объект, провести замеры оказать услуги по
+                предварительной консультации
+
+              </p>
+            </div>
+
+            <div class="questions__item">
+              <div class="questions__item-title">
+                <p class="questions__item-title--text">
+                  Чем вы оборудуете бассейн?
+                </p>
+                <div class="questions__item-wrapper">
+                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                </div>
+              </div>
+              <p class="questions__item-text text">
+                Мы не являемся производителем и продавцами оборудования.
+                <br>
+                То есть не ограничиваемся «собственным»
+                ассортиментом и подберем для вас наилучший и оптимальный вариант
+              </p>
+            </div>
+
+            <div class="questions__item">
+              <div class="questions__item-title">
+                <p class="questions__item-title--text">
+                  Нужен бассейн «под ключ»
+                </p>
+                <div class="questions__item-wrapper">
+                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                </div>
+              </div>
+              <p class="questions__item-text text">
+                Реализуем проект полного цикла — начиная от идеи и копки котлована, до проведения пусконаладочных работ
+                и сдачи Заказчику.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="global__inner-btn">
+          <a class="global__btn-contact main-btn global-btn" href="#">
+            ОСТАЛИСЬ ВОПРОСЫ?
+          </a>
+        </div>
+
 
       </section>
 
