start section reviews + add npm i slick-slider

--- a/app/index.html
+++ b/app/index.html
@@ -359,7 +359,7 @@
 
   <div class="wrapper">
     <main class="main">
-      <section class="screen">
+      <section class="screen" style="background-image: url('images/content/header-bg.jpg');">
         <div class="screen__bg">
           <div class="container">
             <div class="screen__box">
@@ -662,7 +662,7 @@
         </h2>
         <div class="questions__inner">
           <div class="container">
-            <div class="questions__item questions__item--active">
+            <div class="questions__item global__item-bg questions__item--active">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какой бассейн выбрать?
@@ -692,7 +692,7 @@
               </p>
             </div>
 
-            <div class="questions__item">
+            <div class="questions__item global__item-bg">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какие гарантии вы даёте на вашу работу?
@@ -710,7 +710,7 @@
               </p>
             </div>
 
-            <div class="questions__item">
+            <div class="questions__item global__item-bg">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какие данные нужны для предварительного расчета бассейна?
@@ -730,7 +730,7 @@
               </p>
             </div>
 
-            <div class="questions__item">
+            <div class="questions__item global__item-bg">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Чем вы оборудуете бассейн?
@@ -748,7 +748,7 @@
               </p>
             </div>
 
-            <div class="questions__item">
+            <div class="questions__item global__item-bg">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Нужен бассейн «под ключ»
@@ -777,6 +777,84 @@
       </section>
 
 
+      <section class="reviews section">
+
+        <h2 class="reviews__title title">
+          ОТЗЫВЫ
+        </h2>
+        <div class="reviews__slider__inner">
+          <div class="reviews__slider">
+            <div class="reviews__item global__item-bg"
+              style="background-image: url('images/content/reviews__slider-bg1.jpg');">
+              <div class="reviews__item-wrapper">
+                <div class="reviews__info">
+                  <div class="reviews__info-title">
+                    <img class="reviews__info-img" src="images/icons/man.png" alt="">
+                    <div class="reviews__info-name">
+                      АНДРЕЙ НЕКРАСОВ
+                      <div class="reviews__info-name--time">
+                        год назад
+                      </div>
+                    </div>
+                  </div>
+                  <div class="reviews__info__wrapper">
+                    <p class="reviews__info-text text">
+                      Очень хорошая компания! Супер профессиональный подход, очень лояльны к клиенту. При общем высоком
+                      бюджете, смогли найти супер оптимальное решение, которое нас полностью устроило. Сроки все
+                      выдержаны
+                      полностью. Рекомендую!
+                    </p>
+                    <a class="reviews__info-link" href=#>
+                      Больше отзывов на Яндекс...
+                    </a>
+                  </div>
+                </div>
+                <div class="reviews__img">
+                  <img src="images/content/reviews__slider-img1.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="reviews__slider">
+            <div class="reviews__item global__item-bg"
+              style="background-image: url('images/content/reviews__slider-bg1.jpg');">
+              <div class="reviews__item-wrapper">
+                <div class="reviews__info">
+                  <div class="reviews__info-title">
+                    <img class="reviews__info-img" src="images/icons/man.png" alt="">
+                    <div class="reviews__info-name">
+                      АНДРЕЙ НЕКРАСОВ
+                      <div class="reviews__info-name--time">
+                        год назад
+                      </div>
+                    </div>
+                  </div>
+                  <div class="reviews__info__wrapper">
+                    <p class="reviews__info-text text">
+                      Очень хорошая компания! Супер профессиональный подход, очень лояльны к клиенту. При общем высоком
+                      бюджете, смогли найти супер оптимальное решение, которое нас полностью устроило. Сроки все
+                      выдержаны
+                      полностью. Рекомендую!
+                    </p>
+                    <a class="reviews__info-link" href=#>
+                      Больше отзывов на Яндекс...
+                    </a>
+                  </div>
+                </div>
+                <div class="reviews__img">
+                  <img src="images/content/reviews__slider-img1.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          
+        </div>
+
+      </section>
 
 
 
