--- a/app/index.html
+++ b/app/index.html
@@ -782,78 +782,90 @@
         <h2 class="reviews__title title">
           ОТЗЫВЫ
         </h2>
-        <div class="reviews__slider__inner">
-          <div class="reviews__slider">
-            <div class="reviews__item global__item-bg"
-              style="background-image: url('images/content/reviews__slider-bg1.jpg');">
-              <div class="reviews__item-wrapper">
-                <div class="reviews__info">
-                  <div class="reviews__info-title">
-                    <img class="reviews__info-img" src="images/icons/man.png" alt="">
-                    <div class="reviews__info-name">
-                      АНДРЕЙ НЕКРАСОВ
-                      <div class="reviews__info-name--time">
-                        год назад
+        <div class="reviews__wrapper">
+          <div class="reviews__slider__inner">
+            <div class="reviews__slider">
+              <div class="reviews__item global__item-bg"
+                style="background-image: url('images/content/reviews__slider-bg1.jpg');">
+                <div class="reviews__item-wrapper">
+                  <div class="reviews__info">
+                    <div class="reviews__info-title">
+                      <img class="reviews__info-img" src="images/icons/man.png" alt="">
+                      <div class="reviews__info-name">
+                        АНДРЕЙ НЕКРАСОВ
+                        <div class="reviews__info-name--time">
+                          год назад
+                        </div>
                       </div>
                     </div>
+                    <div class="reviews__info__wrapper">
+                      <p class="reviews__info-text text">
+                        Очень хорошая компания! Супер профессиональный подход, очень лояльны к клиенту. При общем
+                        высоком
+                        бюджете, смогли найти супер оптимальное решение, которое нас полностью устроило. Сроки все
+                        выдержаны
+                        полностью. Рекомендую!
+                      </p>
+                      <a class="reviews__info-link text" href=#>
+                        Больше отзывов на Яндекс...
+                      </a>
+                    </div>
                   </div>
-                  <div class="reviews__info__wrapper">
-                    <p class="reviews__info-text text">
-                      Очень хорошая компания! Супер профессиональный подход, очень лояльны к клиенту. При общем высоком
-                      бюджете, смогли найти супер оптимальное решение, которое нас полностью устроило. Сроки все
-                      выдержаны
-                      полностью. Рекомендую!
-                    </p>
-                    <a class="reviews__info-link" href=#>
-                      Больше отзывов на Яндекс...
-                    </a>
+                  <div class="reviews__img" style="background-image: url('images/content/reviews__slider-img1.jpg');">
                   </div>
-                </div>
-                <div class="reviews__img">
-                  <img src="images/content/reviews__slider-img1.jpg" alt="">
                 </div>
               </div>
             </div>
-          </div>
 
 
-          <div class="reviews__slider">
-            <div class="reviews__item global__item-bg"
-              style="background-image: url('images/content/reviews__slider-bg1.jpg');">
-              <div class="reviews__item-wrapper">
-                <div class="reviews__info">
-                  <div class="reviews__info-title">
-                    <img class="reviews__info-img" src="images/icons/man.png" alt="">
-                    <div class="reviews__info-name">
-                      АНДРЕЙ НЕКРАСОВ
-                      <div class="reviews__info-name--time">
-                        год назад
+            <div class="reviews__slider">
+              <div class="reviews__item global__item-bg"
+                style="background-image: url('images/content/reviews__slider-bg1.jpg');">
+                <div class="reviews__item-wrapper">
+                  <div class="reviews__info">
+                    <div class="reviews__info-title">
+                      <img class="reviews__info-img" src="images/icons/man.png" alt="">
+                      <div class="reviews__info-name">
+                        АНДРЕЙ НЕКРАСОВ
+                        <div class="reviews__info-name--time">
+                          год назад
+                        </div>
                       </div>
                     </div>
+                    <div class="reviews__info__wrapper">
+                      <p class="reviews__info-text text">
+                        Очень хорошая компания! Супер профессиональный подход, очень лояльны к клиенту. При общем
+                        высоком
+                        бюджете, смогли найти супер оптимальное решение, которое нас полностью устроило. Сроки все
+                        выдержаны
+                        полностью. Рекомендую!
+                      </p>
+                      <a class="reviews__info-link text" href=#>
+                        Больше отзывов на Яндекс...
+                      </a>
+                    </div>
                   </div>
-                  <div class="reviews__info__wrapper">
-                    <p class="reviews__info-text text">
-                      Очень хорошая компания! Супер профессиональный подход, очень лояльны к клиенту. При общем высоком
-                      бюджете, смогли найти супер оптимальное решение, которое нас полностью устроило. Сроки все
-                      выдержаны
-                      полностью. Рекомендую!
-                    </p>
-                    <a class="reviews__info-link" href=#>
-                      Больше отзывов на Яндекс...
-                    </a>
+                  <div class="reviews__img"
+                    style="background-image: url('images/content/reviews__slider-img1.jpg');">
                   </div>
-                </div>
-                <div class="reviews__img">
-                  <img src="images/content/reviews__slider-img1.jpg" alt="">
                 </div>
               </div>
             </div>
+
           </div>
-
-
-          
+          <button class="slick-arrow slick-prev">
+            <div class="arrow__wrapper">
+              <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+              <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
+            </div>
+          </button>
+          <button class="slick-arrow slick-next">
+            <div class="arrow__wrapper">
+              <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+              <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
+            </div>
+          </button>
         </div>
-
       </section>
 
 
