--- a/app/index.html
+++ b/app/index.html
@@ -845,8 +845,7 @@
                       </a>
                     </div>
                   </div>
-                  <div class="reviews__img"
-                    style="background-image: url('images/content/reviews__slider-img1.jpg');">
+                  <div class="reviews__img" style="background-image: url('images/content/reviews__slider-img1.jpg');">
                   </div>
                 </div>
               </div>
@@ -868,13 +867,74 @@
         </div>
       </section>
 
+      <section class="feedback section" style="background-image: url('images/content/feedback-bg.png');">
+        <div class="container">
+          <h2 class="feedback__title title">
+            Оставить заявку
+          </h2>
+
+          <form class="feedback-form">
+            <div class="feedback__inner">
+              <div class="feedback__wrapper">
+                <div class="feedback__input__wrapper">
+                  <div class="global__item-bg">
+                    <input class="feedback__item text" type="text" name="name" placeholder="Ваше имя..." required>
+                  </div>
+                </div>
+                <div class="feedback__input__wrapper">
+                  <div class="global__item-bg">
+                    <input class="feedback__item text" type="text" name="phone" id="phone"
+                      placeholder="+7 (___) ___-__-__ " required>
+                  </div>
+                </div>
+              </div>
+              <div class="feedback__input__wrapper">
+                <div class="global__item-bg">
+                  <textarea class="feedback__item text feedback__item-text global__item-bg" name="text"
+                    placeholder="Ваше сообщение..."></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="feedback__inners-btn global__inner-btn">
+              <div class="feedback__file__wrapper">
+                <input class="feedback__file" type="file" name="file" id="input__file">
+                <label for="input__file" class="input__file-button main-btn global__btn-contact global-btn">
+                  <span class="input__file-button-text">ПРИКРЕПИТЬ ФАЙЛЫ</span>
+                </label>
+              </div>
+              <button class="feedback__btn main-btn global__btn-contact global-btn">
+                Отправить
+              </button>
+            </div>
+
+          </form>
+        </div>
+
+      </section>
 
 
 
 
 
-
-
+      <!-- <form id="feedback-form" enctype="multipart/form-data" method="post">
+   <div class="form-group">
+     <label for="nameFF">Name</label>
+     <input id="nameFF" name="nameFF" type="text" placeholder=" " required>
+   </div>
+   <div class="form-group">
+     <label for="contactFF">E-mail</label>
+     <input id="contactFF" name="contactFF" type="email" placeholder=" " required>
+   </div>
+   <div class="form-group">
+     <label for="projectFF">About your Project</label>
+     <input id="projectFF" name="projectFF" type="text" placeholder=" " required>
+   </div>
+   <div class="control-file">
+     <label for="fileFF">Attach file</label>
+     <input id="fileFF" name="fileFF" type="file">
+   </div>
+   <button class="btn" type="submit" id="submitFF">Send</button>
+ </form> -->
 
 
 
@@ -894,6 +954,7 @@
   </div>
 
   <script src="js/main.min.js"></script>
+
 </body>
 
 </html>
